[package]
name = "interrupt-with-rtic"
version = "0.1.0"
authors = ["Léo BRIAND <leo.briand@smile.fr>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rtt-target = { version = "0.5.0" }
cortex-m-rtic = "1.1"
nb = "1.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f446", "rtic1", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
